src/index.css
html,
body {
  scroll-behavior: smooth;
}

body {
  font-family: 'Cinzel';
  font-weight: 900;
}

h1,
h2,
h3 {
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 700;
}

p {
  font-family: serif;
  font-weight: 500;
}

